--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,7 +62,21 @@ footer p {
 }
 
 /* Home Page Styles*/
+#homeimg {
+    display: block;
+    width: 600px;
+    padding-top: 1em;
+    margin: 0 auto;
+}
+
+#name {
+    font-size: 60px;
+    text-align: center;
+    margin-bottom: 0;
+}
+
 #tagline {
+    margin-top: 0;
     text-align: center;
 }
 
@@ -74,6 +88,7 @@ footer p {
     display: inline-flex;
     width: 100%;
     justify-content: center;
+    margin-bottom: 7em;
 }
 
 .project {
